--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-dagster = "^1.6.6"
-dagster-webserver = "^1.6.6"
 requests = "^2.31.0"
+google-cloud-storage = "^2.14.0"
+google-auth = "^2.28.1"
+google-cloud-bigquery = "^3.17.2"
 
 
 [build-system]
